--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,9 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         apiClient.h apiClient.cpp
+        getSearchJson.py
+        citySearchData.json
+        resources.qrc
 
 
     )
